# fiamma-committee-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
bitcoin_client/: Cargo.toml
bitcoin_client/src/: api_client.rs
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/src/subcommands/: challenge.rs  disprove.rs  mod.rs  register.rs  signer.rs  tx.rs
config/: Cargo.toml
config/configuration/bitcoin_rpc/: base.yaml  dev.yaml
config/configuration/committee/: dev.yaml  local.yaml  production.yaml
config/configuration/fiamma_rpc/: base.yaml  dev.yaml
config/configuration/health_check/: local.yaml
config/configuration/web3_json_rpc/: base.yaml
config/src/: api.rs  committee.rs  environment.rs  lib.rs  utils.rs
transactions/: Cargo.toml
transactions/src/: assert.rs  challenge.rs  disprove.rs  lib.rs  stake.rs  types.rs
types/: Cargo.toml
types/src/: challenge.rs  circuit.rs  committee.rs  constants.rs  disprove.rs  error.rs  file.rs  lib.rs  presigned_transactions.rs  register.rs  storage_transaction.rs  transaction.rs
wallet/: Cargo.toml
wallet/src/: errors.rs  lib.rs  provider.rs  signer.rs
web3_decl/: Cargo.toml
web3_decl/src/: error.rs
web3_decl/src/namespaces/: committee.rs  mod.rs
