[package]
name = "bitcoin_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm", features = ["rand-std", "serde"] }
thiserror = "1.0"
bitcoincore-rpc = { git = "https://github.com/fiamma-chain/rust-bitcoincore-rpc", branch = "master", features = ["default"] }