[package]
name = "config"
version = "0.1.0"
edition = "2021"

[dependencies]
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.11"
once_cell = "1.13.0"
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm", features = ["rand-std"] }
