[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { path = "../config" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.24", features = ["derive"] }
num_enum = "0.6"
bitcoin = { git = "https://github.com/rust-bitcoin/rust-bitcoin", branch = "bitvm", features = ["rand-std", "bitcoinconsensus", "serde"] }
thiserror = "1.0"
sqlx = { version = "0.7.2", default-features = false, features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "bigdecimal",
    "chrono",
    "json",
    "migrate",
    "ipnetwork"
] }
